--- a/src/app/componentes/rkmain/rkmain.component.html
+++ b/src/app/componentes/rkmain/rkmain.component.html
@@ -80,18 +80,18 @@
 
 
 
-                    <button [style.display]='AgregarArea' *ngIf="fix ==='YN'" class="btn btn-sm btn-light btn-round" (click)="nuevaArea()">
+                    <button [style.display]='AgregarArea' *ngIf="percreacion ==='N'" class="btn btn-sm btn-light btn-round" (click)="nuevaArea()">
         <img   class="img-circle" src="assets/images/Add.png" style="width: 10px; height: 10px;"title="Agregar Area">
         </button>
-                    <button [style.display]='AgregarArea' *ngIf="fix ==='NN' " class="btn btn-sm btn-light btn-round" (click)="nuevaArea()" disabled>
+                    <button [style.display]='AgregarArea' *ngIf="percreacion ==='Y' " class="btn btn-sm btn-light btn-round" (click)="nuevaArea()" disabled>
         <img   class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;"title="Agregar Area">
         </button>
-                    <button [style.display]='AgregarArea' *ngIf="fix ==='NY' " class="btn btn-sm btn-light btn-round" (click)="nuevaArea()" disabled>
+                    <!-- <button [style.display]='AgregarArea' *ngIf="fix ==='NY' " class="btn btn-sm btn-light btn-round" (click)="nuevaArea()" disabled>
         <img   class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;"title="Agregar Area">
         </button>
                     <button [style.display]='AgregarArea' *ngIf="fix ==='YY'  " class="btn btn-sm btn-light btn-round" (click)="nuevaArea()" disabled>
         <img   class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;"title="Agregar Area">
-        </button>
+        </button> -->
                     <!-- <button [style.display]='AgregarArea' *ngIf="fix !=='YN'" class="btn btn-sm btn-light btn-round" (click)="nuevaArea()" disabled>
             <img   class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;"title="Agregar Area">
             </button> -->
