--- a/src/app/componentes/rkmain/rkmain.component.scss
+++ b/src/app/componentes/rkmain/rkmain.component.scss
@@ -272,6 +272,11 @@
   #SinPermisos {
       cursor: not-allowed;
   }
+  
+  .tabla {
+      max-width: 100%;
+      overflow-x: scroll;
+  }
   /*
 @media only screen and (max-width: 400px) {
   .foot{
