--- a/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.html
+++ b/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.html
@@ -49,8 +49,8 @@
             </thead>
             <tbody>
                 <tr *ngFor="let item of pendList">
-                    <td class="mdl-data-table__cell--non-numeric" style="text-align:left">
-                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key)" [value]="item.check" [(ngModel)]="item.check">
+                    <td class="mdl-data-table__cell--non-numeric " style="text-align:left">
+                        <input type="checkbox" style="align-items: left;" class="mdl-data-table__cell--non-numeric" (change)="MarcarJerarquia(item.key,item.status,item.check)" [value]="item.check" [(ngModel)]="item.check">
                         <!-- <ng-template [ngIf]="item.estado < item.statusParent" [ngIfElse]="PadreMayor">
             
                                     </ng-template>
@@ -59,7 +59,7 @@
             
                                     </ng-template> -->
                     </td>
-                    <td class="mdl-data-table__cell--non-numeric">{{item.Accion}}</td>
+                    <td class="mdl-data-table__cell--non-numeric ">{{item.Accion}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Comentarios}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Fecha}}</td>
                     <ng-template [ngIf]="item.Entidad === 'ACTIVIDAD'" [ngIfElse]="Permitido">
@@ -77,7 +77,7 @@
                     <td class="mdl-data-table__cell--non-numeric"><a routerLink="" reload='true' (click)='verTable(item.key)'>
                                     {{item.Descripcion}}  </a></td>
 
-                    <td class="mdl-data-table__cell--non-numeric">{{item.Area}}</td>
+                    <td class="mdl-data-table__cell--non-numeric" id="controles">{{item.Area}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Proceso}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Subproceso}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Actividad}}</td>
@@ -85,7 +85,7 @@
                     <td class="mdl-data-table__cell--non-numeric">{{item.Dimension}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Riesgo}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{item.Consecuencia}}</td>
-                    <td class="mdl-data-table__cell--non-numeric">{{item.Controles}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{item.TipoControl}}-{{item.Controles}}</td>
 
 
 
