--- a/src/app/componentes/rkmain/rkt/rkt.component.html
+++ b/src/app/componentes/rkmain/rkt/rkt.component.html
@@ -1,45 +1,40 @@
 <h6 class="article-title">Area > Proceso > Subproceso > Actividad > Tarea</h6>
-
 <div class="col-xl-12 text-right" align="end" [ngSwitch]="tareaModel.tareaStatus">
 
 
     <div *ngSwitchCase="'CREADO'">
 
-        <mat-dialog-actions *ngIf="btn === creacion && permisoValidar  || btn === administrador && permisoValidar || btn === creacionvalidacion && permisoValidar  || btn === creacionaprobacion && permisoValidar " align="end" cdkDragHandle>
+        <mat-dialog-actions *ngIf="btn === creacion   || btn === administrador  || btn === creacionvalidacion   || btn === creacionaprobacion  " align="end" cdkDragHandle>
             <button mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
         </mat-dialog-actions>
     </div>
     <div *ngSwitchCase="'PENDIENTE INACTIVACION'">
 
-        <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
-            color="accent" (click)="consola('validaraprobar')">Validar</button>
-        <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
-            color="warn" (click)="consola('rechazar')"> Rechazar</button>
+        <button *ngIf="btn === creacion   || btn === administrador  || btn === creacionvalidacion   || btn === creacionaprobacion  " mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
+
 
     </div>
 
     <div *ngSwitchCase="'MODIFICADO'">
 
 
-        <mat-dialog-actions *ngIf="btn === creacion && permisoValidar  || btn === administrador && permisoValidar || btn === creacionvalidacion && permisoValidar  || btn === creacionaprobacion && permisoValidar " align="end" cdkDragHandle>
+        <mat-dialog-actions *ngIf="btn === creacion   || btn === administrador  || btn === creacionvalidacion   || btn === creacionaprobacion  " align="end" cdkDragHandle>
             <button mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
         </mat-dialog-actions>
     </div>
     <div *ngSwitchCase="'ENVIADO A VALIDACION'">
         <mat-dialog-actions align="end">
 
-            <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar|| btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
-                color="accent" (click)="consola('validaraprobar')">Validar</button>
-            <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
-                color="warn" (click)="consola('rechazar')"> Rechazar</button>
+            <button *ngIf="btn === creacionvalidacion  || btn === validacion  || btn == creacionvalidacion || btn === validacionaprobacion  || btn === administrador " mat-raised-button color="accent" (click)="consola('validaraprobar')">Validar</button>
+            <button *ngIf="btn === creacionvalidacion  || btn === validacion  || btn == creacionvalidacion  || btn === validacionaprobacion  || btn === administrador " mat-raised-button color="warn" (click)="consola('rechazar')"> Rechazar</button>
 
         </mat-dialog-actions>
     </div>
 
     <div *ngSwitchCase="'PENDIENTE DE APROBACION'">
         <mat-dialog-actions align="end">
-            <button *ngIf="btn === aprobacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === creacionaprobacion  && permisoValidar|| btn === administrador && permisoValidar" mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
-            <button *ngIf="btn === aprobacion && permisoValidar || btn === validacionaprobacion  && permisoValidar || btn === creacionaprobacion && permisoValidar|| btn === administrador && permisoValidar" mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
+            <button *ngIf="btn === aprobacion  || btn === validacionaprobacion  || btn === creacionaprobacion  || btn === administrador " mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
+            <button *ngIf="btn === aprobacion  || btn === validacionaprobacion   || btn === creacionaprobacion || btn === administrador " mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
         </mat-dialog-actions>
 
     </div>
@@ -60,13 +55,14 @@
     <div *ngSwitchCase="'ENVIADO A APROBACION'">
         <mat-dialog-actions align="end">
 
-            <button *ngIf="btn === aprobacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === creacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
-            <button *ngIf="btn === aprobacion  && permisoValidar|| btn === validacionaprobacion  && permisoValidar || btn === creacionaprobacion && permisoValidar|| btn === administrador && permisoValidar" mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
+            <button *ngIf="btn === aprobacion  || btn === validacionaprobacion  || btn === creacionaprobacion  || btn === administrador " mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
+            <button *ngIf="btn === aprobacion  || btn === validacionaprobacion   || btn === creacionaprobacion || btn === administrador " mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
         </mat-dialog-actions>
     </div>
 
 </div>
 <br>
+
 <div class="row">
     <div class="col-xl-12">
         <div class="box box-default">
@@ -231,22 +227,48 @@
                                 <th style="text-align: left; height: 30px;"></th>
 
                                 <th class="mdl-data-table__cell--non-numeric" style="width: 30px;">
-                                    <div [ngSwitch]="canAdd">
-                                        <div *ngSwitchCase="'N'">
+                                    <div [ngSwitch]="tareaModel.CanAdd">
+                                        <div *ngSwitchCase="false">
 
                                             <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()" id="SinPermisos" disabled>
                               <img class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;">
                           </button>
                                         </div>
-                                        <div *ngSwitchCase="'Y'">
+                                        <div *ngSwitchCase="'true'">
+
+                                            <ng-template [ngIf]="tareaModel.Creador ==='true'" [ngIfElse]='NoPermitido'>
+
+                                                <ng-template [ngIf]="tareaModel.tareaStatusId ==='001' || tareaModel.tareaStatusId ==='008'" [ngIfElse]='opcion2'>
+
+                                                    <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()">
+                                                        <img class="img-circle" src="assets/images/Add.png" style="width: 10px; height: 10px;">
+                                                    </button>
 
 
-                                            <button *ngIf="percreacion ==='Y'" class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()" id="SinPermisos" disabled>
-                                                <img class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10p;" >
-                                            </button>
-                                            <button *ngIf="percreacion !=='Y'" class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()">
-                                                <img class="img-circle" src="assets/images/Add.png" style="width: 10px; height: 10px;">
-                                            </button>
+                                                </ng-template>
+
+                                                <ng-template #opcion2>
+                                                    <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()" id="SinPermisos" disabled>
+                                                        <img class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;">
+                                                    </button>
+                                                </ng-template>
+
+
+                                            </ng-template>
+
+                                            <ng-template #NoPermitido>
+
+                                                <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()" id="SinPermisos" disabled>
+                                                    <img class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;">
+                                                </button>
+
+                                            </ng-template>
+
+
+
+
+
+
                                         </div>
                                     </div>
                                 </th>
@@ -261,19 +283,42 @@
                             <tr *ngFor="let item of stdJobList; let indice = index">
                                 <td class="mdl-data-table__cell--non-numeric">{{indice+1}}</td>
                                 <td class="mdl-data-table__cell--non-numeric">
-                                    <div [ngSwitch]="canAdd">
+                                    <div [ngSwitch]="tareaModel.CanAdd ">
 
-                                        <div *ngSwitchCase="'Y'">
-                                            <button *ngIf="percreacion !=='Y'" id="SinPermisos" class="btn btn-sm btn-light btn-round" disabled (click)="eliminarstdjob(item)">
-                            <img class="img-circle" src="assets/images/Delete_Disabled.png" style="width: 10px; height: 10px;" >
-                        </button>
-                                            <button *ngIf="percreacion ==='Y'" class="btn btn-sm btn-light btn-round" (click)="eliminarstdjob(item)">
-                            <img class="img-circle" src="assets/images/Delete.png" style="width: 10px; height: 10px;">
-                        </button>
+                                        <div *ngSwitchCase=" true ">
+
+                                            <ng-template [ngIf]="tareaModel.Creador ==='true'" [ngIfElse]='NoPermitido'>
+
+                                                <ng-template [ngIf]="tareaModel.tareaStatusId ==='001' || tareaModel.tareaStatusId ==='008'" [ngIfElse]='opcion2'>
+
+                                                    <button class="btn btn-sm btn-light btn-round " (click)="eliminarstdjob(item)">
+                                                        <img class="img-circle " src="assets/images/Delete.png " style="width: 10px; height: 10px; ">
+                                                    </button>
+
+
+                                                </ng-template>
+
+                                                <ng-template #opcion2>
+                                                    <button class="btn btn-sm btn-light btn-round " (click)="eliminarstdjob(item) " id="SinPermisos " disabled>
+                                                        <img class="img-circle " src="assets/images/Delete_Disabled.png " style="width: 10px; height: 10px; ">
+                                                    </button>
+                                                </ng-template>
+
+
+                                            </ng-template>
+
+                                            <ng-template #NoPermitido>
+
+                                                <button class="btn btn-sm btn-light btn-round " (click)="eliminarstdjob(item) " id="SinPermisos " disabled>
+                                                    <img class="img-circle " src="assets/images/Delete_Disabled.png " style="width: 10px; height: 10px; ">
+                                                </button>
+
+                                            </ng-template>
+
                                         </div>
-                                        <div *ngSwitchCase="'N'">
-                                            <button class="btn btn-sm btn-light btn-round" (click)="eliminarstdjob(item)" id="SinPermisos" disabled>
-                            <img class="img-circle" src="assets/images/Delete_Disabled.png" style="width: 10px; height: 10px;">
+                                        <div *ngSwitchCase=" false ">
+                                            <button class="btn btn-sm btn-light btn-round " (click)="eliminarstdjob(item) " id="SinPermisos " disabled>
+                            <img class="img-circle " src="assets/images/Delete_Disabled.png " style="width: 10px; height: 10px; ">
                         </button>
                                         </div>
                                     </div>
