--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,6 +14,8 @@
 @import "error";
 @import "pages/general";
 .tabla {
+    border-left: solid 1px #ccc;
+    border-right: solid 1px #ccc;
     max-width: 100%;
-    overflow-x: scroll
+    overflow-x: scroll;
 }
